<resources>
    <string name="app_name">RetrofitDemo</string>
    <string name="close">Close</string>
    <string name="copy">Copy</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="scan_result">Scan result</string>
    <string name="scanner_error">Scanner error: %s</string>
    <string name="login_id">Login Id</string>
    <string name="login_password">Login Password</string>
    <string name="company_id">Company Id</string>
    <string name="gateway">Gateway</string>
    <string name="login">Login</string>
</resources>